--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Assets\Scripts\PicUpTools.cs" />
     <Compile Include="Assets\Scripts\AmmoPicUp.cs" />
     <Compile Include="Assets\Scripts\DestroyEnemy.cs" />
+    <Compile Include="Assets\Scripts\UIManagerPause.cs" />
     <Compile Include="Assets\Scripts\Controller.cs" />
     <Compile Include="Assets\Scripts\AutomaticDoor.cs" />
     <Compile Include="Assets\Scripts\TriggerDoorController.cs" />
@@ -106,6 +107,7 @@
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
     <Compile Include="Assets\JMO Assets\WarFX\Demo\Assets\WFX_Demo_New.cs" />
     <Compile Include="Assets\Scripts\OverLap.cs" />
+    <Compile Include="Assets\Scripts\uitest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
